# sentiment-elecciones

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  requirements.txt
data/: TITULOS_SENTIMENT ANALYSIS.xlsx  dataset.json  titulares_etiquetados.xlsx  titulares_etiquetados_150.xlsx  titulos.csv  titulos_filtrados.csv
data/etiquetados_abril_2021/: TITULARES ETIQUETADOS- COMPLETO (#1).xlsx  TITULARES ETIQUETADOS- COMPLETO (#2).xlsx  TITULARES ETIQUETADOS- COMPLETO (#3).xlsx
data/etiquetados_enero_2021/: .~lock.TITULARES A etiquetar - PLANTILLA(JG).xlsx#  TITULARES A etiquetar - PLANTILLA(E2) - Correcciones rosario.xlsx  TITULARES A etiquetar - PLANTILLA(E3).xlsx  TITULARES A etiquetar - PLANTILLA(JG).xlsx
data/etiquetados_final/: e2.xlsx  e3.xlsx  et1.xlsx
notebook/: Agreements.ipynb  Armar dataset.ipynb  Arreglar P12.ipynb  Exploratorio.ipynb
notebook/old/: Armar Dataset.ipynb
notebooks/: Agreements viejo.ipynb  Agreements.ipynb  Armar dataset.ipynb  Arreglar P12.ipynb  Asignacion.ipynb  Dataset exploratory.ipynb  Dataset_analysis.ipynb  Desenmascarado.ipynb  Exploratorio.ipynb  Targeted_Sentiment_Analysis_BERT_Experiments.ipynb  Targeted_Sentiment_Analysis_Dataset_analysis.ipynb
notebooks/classification/: Classifier NLI.ipynb  Classifier no target.ipynb  Classifier question.ipynb  Classifier targeted.ipynb  Classifier.ipynb
notebooks/old/: Armar Dataset.ipynb
