[tool.poetry]
name = "sentiment-elecciones"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_elecciones"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.27.4"
datasets = "^2.11.0"
sklearn = "^0.0.post1"
seaborn = "^0.12.2"
krippendorff = "^0.6.0"
statsmodels = "^0.13.5"
fire = "^0.5.0"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
